--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
                     <ul class="navbar-nav">
                         <li><a class="nav-link active">@Html.ActionLink("Inicio", "Index", "Home")</a></li>
                         <li><a class="nav-link">@Html.ActionLink("Acerca de nosotros", "About", "Home")</a></li>
-                        <li><a class="nav-link">@Html.ActionLink("Docentes y estudiantes", "SGA", "Home")</a></li>
-                        <li><a class="nav-link">@Html.ActionLink("Administrativos", "Admin", "Home")</a></li>
+                        <li><a class="nav-link">@Html.ActionLink("Docentes y estudiantes", "SGA", "Login")</a></li>
+                        <li><a class="nav-link">@Html.ActionLink("Administrativos", "Admin", "Login")</a></li>
                         <li><a class="nav-link">@Html.ActionLink("Contactenos", "Contact", "Home")</a></li>
                     </ul>
                 </div>
