--- a/Views/Login/SGA.cshtml
+++ b/Views/Login/SGA.cshtml
@@ -3,20 +3,23 @@
     ViewBag.Title = "Sistema de Gestión Académica";
     Layout = "~/Views/Shared/_Login.cshtml";
 }
+
 <div class="limiter">
+    
     <div class="container-login100">
         <div class="wrap-login100">
-            <div class="login100-pic js-tilt" data-tilt>
 
+            <div class="login100-pic js-tilt" data-tilt>
                 <img src="\img\login\img-01.png" alt="IMG">
             </div>
-            <form class="login100-form validate-form">
+            <form method="POST" action="@Url.Content("~/Login/SGA")" class="login100-form validate-form">
                 <span class="login100-form-title">
+
                     <div class="text-center">
                         <img src="\img\login\logo.png" alt="IMG" style="width: 90%;height: 90%;">
                     </div>
+                    <br />
                     Sistema de Gestión Académica<br>
-                    Estudiantes y docentes
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate="Un email valido tiene esta forma: ex@abc.xyz">
@@ -28,7 +31,7 @@
                 </div>
 
                 <div class="wrap-input100 validate-input" data-validate="La contraseña es obligatoria">
-                    <input class="input100" type="password" name="pass" placeholder="Contraseña">
+                    <input class="input100" type="password" name="password" placeholder="Contraseña">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="fa fa-lock" aria-hidden="true"></i>
@@ -40,7 +43,16 @@
                         Entrar
                     </button>
                 </div>
+                <br />
+                <div class="text-center">
 
+                    @if (ViewBag.Error != null)
+                    {
+                        <div class="alert alert-danger" role="alert">
+                            @ViewBag.Error
+                        </div>
+                    }
+                </div>
                 <div class="text-center p-t-12">
                     <span class="txt1">
                         ¿Olvidaste la
