--- a/Views/Panel/Index.cshtml
+++ b/Views/Panel/Index.cshtml
@@ -1,11 +1,29 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Dashboard";
+    Layout = "~/Views/Shared/_Paneles.cshtml";
 }
 @if (Session["User"] != null)
 {
-    <h2>Index</h2>
+<main class="app-content">
+    <div class="app-title">
+        <div>
+            <h1><i class="fa fa-dashboard"></i> Blank Page</h1>
+            <p>Start a beautiful journey here</p>
+        </div>
+        <ul class="app-breadcrumb breadcrumb">
+            <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
+            <li class="breadcrumb-item"><a href="#">Blank Page</a></li>
+        </ul>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="tile">
+                <div class="tile-body">Create a beautiful dashboard</div>
+            </div>
+        </div>
+    </div>
+</main>
 }
 else
 {
