Se añade el manejo de DataTables para la parte de estudiantes sin modals.

--- a/Views/Admin/Estudiantes.cshtml
+++ b/Views/Admin/Estudiantes.cshtml
@@ -1,8 +1,91 @@
 ﻿
 @{
     ViewBag.Title = "Estudiantes";
+    ViewBag.Etiqueta = "active";
     Layout = "~/Views/Shared/_Paneles.cshtml";
 }
+@if (Session["User"] == null || !Session["Rol"].Equals("Administrador"))
+{
+    <script> window.location.href='@Url.Action("Index", "Home")'; </script>
+}
+else
+{
+    <main class="app-content">
+        <div class="app-title">
+            <div>
+                <h1><i class="fa fa-graduation-cap"></i> Estudiantes</h1>
+                <p>Crea,elimina y edita estudiantes</p>
+            </div>
+            <ul class="app-breadcrumb breadcrumb">
+                <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
+                <li class="breadcrumb-item"><a href="@Url.Content("~/Estudiantes/")">Estudiantes</a></li>
+            </ul>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="tile">
+                    <div class="tile-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover table-bordered no-footer dataTable" id="Estudiantes" role="grid" aria-describedby="tableRoles_info" style="width: 1533px;">
+                                <thead>
+                                <th>ID</th>
+                                <th>Documento</th>
+                                <th>Nombres</th>
+                                <th>Apellidos</th>
+                                <th>Telefono</th>
+                                <th>Email</th>
+                                <th>Estado</th>
+                                <th>Acciones</th>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    @section scripts{
+        <script>
+            $(document).ready(function () {
+                $('#Estudiantes').DataTable({
+                    "language": {
+                        "url": "//cdn.datatables.net/plug-ins/1.10.20/i18n/Spanish.json"
+                    },
+                    "processing": true,
+                    "serverSide": true,
 
-<h2>Estudiantes</h2>
+                    "ajax": {
+                        "url": "@Url.Content("~/Admin/JsonEstudiantes")",
+                        "type": "POST",
+                        "datatype": "json"
+                    },
+                    "pageLength": 10,
+                    "filter": true,
+                    "responsivePriority": 1,
 
+                    "data": null,
+                    "columns": [
+                        { "data": "Alum_ID", "name": "Alum_ID", "autoWidth": true },
+                        { "data": "Alum_Doc", "name": "Alum_Doc", "autoWidth": true },
+                        { "data": "Alum_Nom", "name": "Alum_Nom", "autoWidth": true },
+                        { "data": "Alum_Apel", "name": "Alum_Apel", "autoWidth": true },
+                        { "data": "Alum_Tel", "name": "Alum_Tel", "autoWidth": true },
+                        { "data": "Alum_Email", "name": "Alum_Email", "autoWidth": true },
+                        { "data": "Alum_Status2", "name": "Alum_Status2", "autoWidth": true },
+                        { "data": "Acciones", "name": "Acciones", "autoWidth": true }
+                    ],
+                    "responsieve": "true",
+                    "bDestroy": true
+                });
+            });
+
+        </script>
+        @if (ViewBag.Error != null)
+        {
+            <script>
+            swal("Error",@ViewBag.Error, "success");</script>
+        }
+    }
+}
