--- a/Views/Shared/_Paneles.cshtml
+++ b/Views/Shared/_Paneles.cshtml
@@ -18,6 +18,7 @@
     <link rel="shortcut icon" href="/img/principal/header.png" />
     @Styles.Render("~/Scripts/css/panel/main.css")
     @Styles.Render("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
+    @Styles.Render("~/Scripts/css/panel/dataTables.min.css")
 </head>
 <body class="app sidebar-mini">
     <!-- Navbar-->
@@ -42,7 +43,7 @@
     <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
         <div class="app-sidebar__user">
-           
+
             @if (this.Session["Rol"].Equals("Administrador"))
             {
                 <img class="app-sidebar__user-avatar" src="~/img/panel/admin.png" style="width:40%;" alt="User Image">
@@ -101,11 +102,13 @@
         </ul>
     </aside>
     @RenderBody()
-    @Scripts.Render("~/Scripts/js/panel/jquery-3.3.1.min.js")
+    @Scripts.Render("~/Scripts/js/panel/jquery-3.6.0.min.js")
     @Scripts.Render("~/Scripts/js/panel/popper.min.js")
     @Scripts.Render("~/Scripts/js/panel/bootstrap.min.js")
     @Scripts.Render("~/Scripts/js/panel/main.js")
     @Scripts.Render("~/Scripts/js/panel/plugins/pace.min.js")
+    @Scripts.Render("~/Scripts/js/panel/jsdataTables.min.js")
+    @Scripts.Render("https://unpkg.com/sweetalert/dist/sweetalert.min.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
