Se añade ajax para la eliminación del estudiante

--- a/Views/Admin/Estudiantes.cshtml
+++ b/Views/Admin/Estudiantes.cshtml
@@ -60,7 +60,53 @@ else
                 <div class="modal-body">
                     <div class="tile">
                         <div class="tile-body">
-
+                            <form id="formUsuario" name="formUsuario"  method="POST" action="#" class="form-horizontal">
+                                <input type="hidden" id="idUsuario" name="idUsuario" value="">
+                                <p class="text-primary">Todos los campos son obligatorios.</p>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="txtIdentificacion">Identificación</label>
+                                        <input type="text" class="form-control" id="txtIdentificacion" name="txtIdentificacion" required="">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="txtNombre">Nombres</label>
+                                        <input type="text" class="form-control valid validText" id="txtNombre" name="txtNombre" required="">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="txtApellido">Apellidos</label>
+                                        <input type="text" class="form-control valid validText" id="txtApellido" name="txtApellido" required="">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="txtTelefono">Teléfono</label>
+                                        <input type="text" class="form-control valid validNumber" id="txtTelefono" name="txtTelefono" required="" onkeypress="return controlTag(event);">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="txtEmail">Email</label>
+                                        <input type="email" class="form-control valid validEmail" id="txtEmail" name="txtEmail" required="">
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group col-md-6">
+                                        <label for="txtPassword">Password</label>
+                                        <input type="password" class="form-control" id="txtPassword" name="txtPassword">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="listStatus">Status</label>
+                                        <select class="form-control selectpicker" id="listStatus" name="listStatus" required>
+                                            <option value="1">Activo</option>
+                                            <option value="2">Inactivo</option>
+                                        </select>
+                                    </div>
+                                </div>             
+                                <div class="tile-footer">
+                                    <button id="btnActionForm" class="btn btn-primary" type="submit"><i class="fa fa-fw fa-lg fa-check-circle"></i><span id="btnText">Guardar</span></button>&nbsp;&nbsp;&nbsp;
+                                    <button class="btn btn-danger" type="button" data-dismiss="modal"><i class="fa fa-fw fa-lg fa-times-circle"></i>Cerrar</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -68,7 +114,7 @@ else
         </div>
     </div>
     <!---Modal 2-->
-                    <div class="modal fade" id="modalDeleteEst" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modalDeleteEst" tabindex="-1" role="dialog" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                                 <div class="modal-header headerRegister" style="background: #fc0505;color: #FFF;">
@@ -90,8 +136,9 @@ else
 
 @section scripts{
     <script>
-            $(document).ready(function () {
-                $('#Estudiantes').DataTable({
+        document.addEventListener('DOMContentLoaded', function () {
+        $(document).ready(function () {
+               tableEstudiantes = $('#Estudiantes').DataTable({
                     "language": {
                         "url": "//cdn.datatables.net/plug-ins/1.10.20/i18n/Spanish.json"
                     },
@@ -118,12 +165,88 @@ else
                         { "data": "Alum_Status2", "name": "Alum_Status2", "autoWidth": true },
                         { "data": "Acciones", "name": "Acciones", "autoWidth": true }
                     ],
+                    'dom': 'lBfrtip',
+                    'buttons': [
+                        {
+                            "extend": "copyHtml5",
+                            "text": "<i class='far fa-copy'></i> Copiar",
+                            "titleAttr": "Copiar",
+                            "className": "btn btn-secondary"
+                        }, {
+                            "extend": "excelHtml5",
+                            "text": "<i class='fas fa-file-excel'></i> Excel",
+                            "titleAttr": "Esportar a Excel",
+                            "className": "btn btn-success"
+                        }, {
+                            "extend": "pdfHtml5",
+                            "text": "<i class='fas fa-file-pdf'></i> PDF",
+                            "titleAttr": "Esportar a PDF",
+                            "className": "btn btn-danger"
+                        }, {
+                            "extend": "csvHtml5",
+                            "text": "<i class='fas fa-file-csv'></i> CSV",
+                            "titleAttr": "Esportar a CSV",
+                            "className": "btn btn-info"
+                        }
+                    ],
                     "responsieve": "true",
                     "bDestroy": true
                 });
-            });
-
-                        </script>
+        });
+        }, false);
+        function fntDelEst(id) {
+            id = parseInt(id);
+            var data = { id: id };
+            swal({
+                title: "¿Esta seguro que desea eliminar este estudiante?",
+                text: "¡Una vez realizado esto no se puede deshacer!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                .then((willDelete) => {
+                    if (willDelete) {
+                        $.ajax({
+                            type: "POST",
+                            url: "@Url.Action("EliminarEst","Admin")",
+                            content: "application/json; charset=utf-8",
+                            dataType: "json",
+                            data: data,
+                            success: function (d) {
+                                var msg = d.msg;
+                                if (d.Success == true) {
+                                    swal("Success", {
+                                        icon: "success",
+                                        title: "Éxito al procesar la petición",
+                                        text: msg,
+                                    });
+                                    tableEstudiantes.ajax.reload();
+                                }else {
+                                    swal("Error", {
+                                        icon: "error",
+                                        title: "Error al procesar la petición",
+                                        text: msg,
+                                    });
+                                    tableEstudiantes.ajax.reload();
+                                }
+                            },
+                            error: function (xhr, textStatus, errorThrown) {
+                                swal("Error", {
+                                    icon: "error",
+                                    title: "Error al procesar la petición",
+                                    text: "Por favor comunique a un administrador en caso de que el error persista.",
+                                });
+                                
+                            }
+                        });
+                    } else {
+                        swal("Acción cancelada", {
+                            icon: "error",
+                        });
+                    }
+                });
+        }
+    </script>
                         
                     }
-                }
+ }
